[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cepces"
version = "0.3.9"
requires-python = ">=3.8"
dependencies = [
    "cryptography >= 1.2",
    "requests",
    "requests_gssapi >= 1.2.2"
]
license = { file = "LICENSE" }
authors = [
    { name = "Daniel Uvehag", email = "daniel.uvehag@gmail.com" }
]
keywords = ["certificate ca cep ces adcs wstep xcep"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
description = "CEP/CES library."
readme = "README.rst"

[project.urls]
"Homepage" = "https://github.com/openSUSE/cepces"
"Bug Tracker" = "https://github.com/openSUSE/cepces/issues"

[tool.setuptools.data-files]
"libexec/certmonger" = ["bin/cepces-submit"]

[tool.black]
target-version = ['py39']
