[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cepces"
version = "0.3.12"
requires-python = ">=3.10"
dependencies = [
    "cryptography >= 1.2",
    "requests",
    "requests_gssapi >= 1.4.0"
]
license = { file = "LICENSE" }
authors = [
    { name = "Daniel Uvehag", email = "daniel.uvehag@gmail.com" }
]
keywords = ["certificate ca cep ces adcs wstep xcep"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
description = "CEP/CES library."
readme = "README.rst"

[project.optional-dependencies]
user-submit = [
    "pyasn1"
]

[project.urls]
"Homepage" = "https://github.com/openSUSE/cepces"
"Bug Tracker" = "https://github.com/openSUSE/cepces/issues"

[tool.setuptools.data-files]
"libexec/certmonger" = ["bin/cepces-submit"]

[tool.ruff]
exclude = ["stubs"]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
# Enable pycodestyle (E), pyflakes (F), and mccabe complexity (C90)
select = ["E", "F", "C90"]

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
# don't resort auto-generated stub files
"stubs/*" = ["I"]

[tool.pyright]
include = ["src", "tests"]
exclude = ["stubs", "tests/manual"]
pythonVersion = "3.10"
pythonPlatform = "Linux"
typeCheckingMode = "strict"
stubPath = "stubs"

# Allow isinstance checks for runtime validation even when type is known
reportUnnecessaryIsInstance = "none"

# Allow private attribute access in tests (common testing pattern)
[[tool.pyright.executionEnvironments]]
root = "tests"
reportPrivateUsage = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--ignore=tests/manual",
]
